continuing timeline revisions
Former-commit-id: 0ad5a27b75e1aa7bfecf8303044b22a5bd34daeb

--- a/_includes/timeline/shipsRobotsISA.html
+++ b/_includes/timeline/shipsRobotsISA.html
@@ -19,25 +19,29 @@
           one gravity. </li>
         <li>The solar panels need to be quite extensive for the Station to do its construction and processing work, and to supply the labs with all the power they need. They extend from the end of the hub opposite the hexagon of trusses, together with the
         radiator panels. </li>
-        <li>The final components built, including internal elements of the Torus and the Teardrops, are made with materials from the Moon</li>
+        <li>Many elements of the final components built, including internal elements of the Torus and the Teardrops, are made with materials from the Moon</li>
       </ul>
     </details>
     <h5><a href="machines2.html#PodShip">Pod Ships start shuttling between Earth orbit and Lunar Orbit</a></h5>
     <p>The Pod Ships are operated remotely. They are capable of doing rendezvous and docking maneuvers on their own. Basically they are a nose with all the operating systems, a robotic arm, and a pair of solar panel wings, then a long truss with racks for the pods, and then the fuel tanks and engines on the far end.</p>
-    <p>The pods are the space equivalent of shipping containers - tubes with rounded ends covered in insulation and whipple shielding, a sliding door, internal structures for holding things, and connectors if items need power or a comms connection. A Pod Ship can take 8 small ones or 4 long ones. Crew are transported in pods adapted for life support and basic accommodations. Some pods are  water tanks, returning mined water from the Moon to the EESS. Pod Ships are designed for a maximum payload of 80 tons to the lunar orbit when operations begin.
+    <p>The pods are the space equivalent of shipping containers - tubes with rounded ends covered in insulation and whipple shielding, a sliding door, internal structures for holding things, and connectors if items need power or a comms connection. A Pod Ship can take 8 small ones or 4 long ones. Crew are transported in pods adapted for life support and basic accommodations. Some pods are  water tanks, returning mined water from the Moon to the EESS. Pod Ships are designed for a maximum payload of 80 tons to lunar orbit when operations begin.
     </p>
     <details>
       <summary>Pod Ship Operations and Early Missions</summary>
     <ul>
       <li>These ships have next gen hydrolox engines capable of many restarts. They get serviced between trips at the EESS.</li>
-      <li>Early missions are all to a polar orbit. Once tether construction begins, they all enter a circular orbit riding the Moon's terminus (between the night side and the day side), at an altitude of 5000 km. The first tether complex goes there so it has constant sunlight on its solar panels. </li>
+      <li>Early missions are all to a polar orbit. Once tether construction begins, they all enter a circular orbit about 20&deg; off the Moon's terminator (between the night side and the day side), at an altitude of 5000 km. The skyhook complex goes there so that not only it has constant sunlight on its solar panels,<sup class="note tooltip" data-tooltip-content="#terminator">[?]</sup> but the three later polar skyhooks spaced 45&deg; apart all will too.</li>
       <li>The 1st and 2nd missions deliver 2 Lunar Nuclear Craft (LNCs, pronounces 'links'), extra fuel, and initial equipment for surface operations.</li>
       <li>There are 15 missions to deliver the equipment and components to build the first polar tether. The Pod Ship that delivers the first one stays in orbit so its solar arrays can power the construction equipment, plus it provides a comms link, orbital maintenance, and a stable construction platform. The other in operation at this point delivers goods every 2 weeks.</li>
       <li>On the 3rd one, a crew pod is dropped off and connected to the Pod Ship staying in orbit, with a crew of 4 that stay for 4 weeks. They oversee initial deployment and testing of the skyhook construction equipment, and remotely operate equipment at the lunar pole. The 6th one delivers the superstructure of the future Crossroads Station, and the Pod Ship leaves, handing off its duties to that skeletal Station. The role of the Station after this is outlined it its section below.</li>
-      <li>After a few months of lunar surface operations, there are 2 further missions delivering equipment, fuel, and materials which the LNCs transfer to polar ops. The LNCs deliver a few tons of lunar material that the Pod Ships return to the EESS for analysis.</li>
+      <li>After initial lunar surface operations, there are ongoing missions delivering equipment, fuel, and materials which the LNCs transfer to polar ops. </li>
       <li>By the end of this phase, the Pod Ships have delivered many loads of equipment and supplies, and have rotated many crews. They return to the EESS carrying water, lunar dust that goes to soil beneficiation projects in its greenhouses, and initial in situ processed materials for testing and incorporation into internal elements of the EESS.</li>
     </ul>
   </details>
+  <div class="tooltip_templates">
+    <span id="terminator">
+      Maintaining the orbit with this relationship to the terminator requires it be made to precess one revolution around the poles each year. Our estimate is that this requires a few meters per second of delta V each day, which fits easily into the fuel budget.
+  </div>
     <h5><a href="machines2.html#nuclearShuttles">Lunar Nuclear Craft</a></h5>
     <p>These craft use nuclear thermal engines with a bipropellant design, known as a <a href="https://ntrs.nasa.gov/search.jsp?R=20170004744&hterms=lantr+nuclear+thermal&qs=N%3D0%26Ntk%3DAll%26Ntx%3Dmode%2Bmatchallany%26Ntt%3Dlantr%2Bnuclear%2Bthermal">LANTR design</a>. They get thrust by superheating hydrogen, and during launch and landing, can greatly augment that thrust by injecting oxygen into the engine nozzle, basically like an afterburner. They are designed for vertical landing and takeoff.
     </p>
@@ -62,30 +66,42 @@
   <details>
     <summary>Crossroads Systems and Operations</summary>
     <ul>
-      <li>The climbers are nuclear</li>
-      <li>The Anchor Station runs on solar power</li>
-      <li>Orbital control is mostly achieved through passive momentum transfer, by dropping and retrieving weights.</li>
+      <li>The climber cars run on power beamed as microwaves from the anchor station and from the foot platform. Onboard flywheel energy storage allows them to go short distances without receiving external power. There are 10 waystations along both tethers, where cars can pass each other, and where microwave receivers and tranmitters pass power from either end of the tether up or down. Such receivers and transmitters can be very light, though some need to be large to be effective. The large ones can be mostly on the anchor station, where their mass doesn't matter.<sup class="note tooltip" data-tooltip-content="#nukepower">[?]</sup> </li>
+      <li>The waystations also make it easier for maintenance and stabilizer carts to shuttle along the tether checking and repairing its cables, and releasing and catching momentum-exchange weights. The waystations are places where the carts can recharge their flywheels (though they also have microwave receivers for power). At the waystations, the tether is stronger and more protected. When new cables are woven into the tether, it is done between waystations. </li>
+      <li>The anchor station runs on solar power. Because the tether orbits near the terminator, the only time its solar arrays aren't in sunlight is during the occasional eclipse by the Earth. The solar arrays are extended over time as a wing extending from one side of the station. </li>
+      <li>Maintaining anchor altitude and a circular orbit is mostly achieved through passive momentum transfer, by dropping and retrieving weights. Engines on the anchor supplement this and do the work of precessing the anchor's orbit to keep it always in the same relationship to the sun. VASMIR drives, or Neumann drives, or maybe HiPEP drives - whatever wins the high-ISP race will do nicely.</li>
     </ul>
   </details>
-    <p><b>The Pod Ships make  </b></p>
+  <div class="tooltip_templates">
+    <span id="nukepower">
+      An alternative is the climber cars run on nuclear power from a small reactor connected to Stirling engine generators. By putting the reactor in a separate car and running a power cable from there to the climber, the reactor can be kept a kilometer or more from the climber, allowing a shield with a smaller area to be used between the two. A shielded dock thus has to be made above the foot platform, so the climber can pass the reactor and reach its destination. A dock that is about 10 km from the anchor station is also needed, so the cone of shielded space is wide enough to cover the whole station, and anything that might stick out gets a weaker dose. Overall, the microwave beaming approach seems more flexible, more robust, and safer, as long as the beams can be kept well aligned despite oscillations due to actions on the tether. The transmitters would need to be able to rotate a small amount to keep receivers in their focus. Having flywheels to store energy as well thus is also interesting in that they can be used simultaneously to dampen oscillations. Energy harvested when climbers control descent by braking could also be used to spin up the flywheels. Perhaps calculations would show the flywheels would be too heavy to be a significant help, pending that it is just a thought.
+    </span>
+  </div>
+    <p><b>The Pod Ships make something on the order of 100 trips to the Moon during this phase.  </b></p>
   </article>
   <article class="column" id="RobotRoverTests">
-    <h5><a href="machines.html#robots">Robot and Rover Test Missions</a></h5>
-    <p>These can't start until the pod ship and shuttle are running and have delivered their first payload to the site of the future base. The goal would be to have robotic machinery on the surface capable of performing the complex work of construction and
-      volatile extraction by the time the asteroid for the first skyhook arrives in orbit.</p>
-    <ul>
-      <li>
-        <h6>Mission 1</h6> After the pod ship deploys the nuclear shuttle, on the next trip it brings rovers, robots, equipment and supplies. The nuclear shuttle delivers them to the base site on the west rim of Whipple crater. The battery banks of the shuttle (charged
-        from its nuclear reactor), and its robotic arm, are helpful in providing the robots their initial charge and getting the solar cell arrays and microwave power transmitters set up. </li>
-      <li>
-        <h6>Small initial tasks for robots</h6> The remotely operated equipment excavates a trench, places an inflatable hab for the crew in it, makes arches that cover it, and cover them over with enough regolith to form a good radiation barrier. If there are problems with this process, the
-        human crew can complete it. They also do scouting, testing, and experiments.</li>
-      <li>
-        <h6>Paving</h6>A rover using simple Fresnel lenses fuses surface regolith near the hab construction site. The thin layer created will tend to break up and shift, but by driving a grid of fused regolith stakes into the ground before passing the lens over an area,
+    <h5><a href="machines.html#robots">Robot and Rover  Mission</a></h5>
+<p>Each of the 2 LNCs delivers equipment to the base site on the west rim of Whipple crater, each returning once to the Pod Ship to land it all. They land 80 tons of robots, equipment, and supplies, and enough water for the hydrolysis pod to produce the fuel needed for them to make it back to orbit. The robots, operated from Earth and then from orbit, deploy the solar power systems, a hangar for lab work and long-term maintenance and repair, scout, test lots of equipment including for water mining, excavation, and construction, and do a bunch of 'paving'. </p>
+<details>
+      <summary>Initial tasks done by robots</summary>
+      <ul>
+          <li>Set up of tall masts carrying solar panel masts and microwave power transmitters, cables and power management equipment, and radiator units.</li>
+          <li>A section of ground is roughly leveled and paved with the technique explained shortly</li>
+          <li>Once the paving hardens, a half-pipe shaped hangar is set up. It is an unpressurized shell with a bunch of snap-together units inside, resulting in a maintenance and repair hangar for the robots and their tools, and a lab area. All the equipment for these tasks in installed in the prefab bays, shelves, and tables for them. </li>
+          <li>One of the cargo pods lowered from a LNC is a self-contained unit for converting water to liquid oxygen and liquid hydrogen. It only needs power from the solar masts or the LNC reactors, and its custom radiator units deployed. It landed with a full water tank.</li>
+          <li>
+        A rover using simple mirrors and Fresnel lenses fuses surface regolith around the site. The thin layer created will tend to break up and shift, but by driving a grid of fused regolith stakes into the ground before passing the lens over an area,
         the melted surface fuses with the stakes into one piece. The cracking then doesn't lead to shifting. Thickening the fused layer by spreading more regolith overtop and heating it can also be done. </li>
-      <li>
-        <h6>Mission 2 - with Crew</h6> a crew is delivered to orbit by the pod ship in a crew pod. They are picked up by the nuclear shuttle and landed at the base site.</li>
-      <li>The crew spends a few weeks on site:
+        <li>These simple stakes and perhaps one or two other simple shapes are produced in graphite molds filled with molten regolith produced with a parabolic mirror setup. Experimentation is done with making useful shapes by cast-in-place methods after pressing shapes into the powder regolith.</li>
+        <li>Potential ice mining sites are scouted and surveyed. Prototype equipment for such mining is tested.</li>
+        <li> A unit for boring deep holes is tested, and once successful small charges are laid and excavation by blasting is tested - far from everything else, and on a small scale. If successful, the wells for the LNC nuclear engines are dug and prepped, and on their next landing, the LNCs use them. If unsuccessful the wells are dug anyhow, much more laboriously and slowly.</li>
+      </ul>
+      </details>
+
+<h5>Crew Sortie Mission and Robot Expansion</h5>
+<p>An initial inflatable hab for crew sorties that looks a lot like a Quonset hut (based on upcoming design by Benaroya et al.) is delivered and set up prior to the arrival of a crew of 4 that stays for 2 weeks. The LNCs deliver a further 100 tons of materials and supplies in  support of the crew and accompanying mission goals.</p>
+    <p><b>End Current Revisions</b></p>
+    ----------------------------------
         <ul>
           <li>Testing and prepping the prototype robots that will be used for more complex remote work after the crew leave, and setting up initial infrastructure for them: rails they move on, bases for arms, anchor points for cables, stations for basic maintenance
             and repairs or for installing drop-in replacement parts.</li>
