timeline revisions continue
Former-commit-id: bc3f7cb92f5d4aed989d56afb80455abb09d9361

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -46,7 +46,7 @@
 							<li><a href="colonies.html#DomeCity">Lalande City</a></li>
 						</ul>
 					</li>
-					<li><a href="colonies.html#peary">Whipple</a>
+					<li><a href="colonies.html#polar">Hinshelwood</a>
 						<ul>
 							<li><a href="colonies.html#PolarFirstHab">First Polar Hab</a></li>
 						</ul>
