--- a/_includes/timeline/timelineIntros.html
+++ b/_includes/timeline/timelineIntros.html
@@ -4,10 +4,10 @@
   <details>
   <summary>The key to success</summary>
    <p>
-    Europeans colonized the world thanks to their great sailing ships. Railroads were vital to expansion across the North American continent. Almost any level of investment is justfied if it secures you access long-term to a large enough place. When that new place is the rest of the solar system? Bet the bank on it.
-    The difference between reliance on chemical rockets and reliance on the system below is like the difference between wagon trains and steam locomotives. Railroads completely changed what was possible, this is the same thing.
+    Europeans colonized the world thanks to their great sailing ships. Railroads were vital to expansion across the North American continent. Almost any level of investment is justified if it secures you access long-term to a large enough place. When that new place is the rest of the solar system? Bet the bank on it.
+    The difference between reliance on chemical rockets and reliance on the system below is like the difference between wagon trains and steam locomotives. Railroads completely changed what was possible. What follows is the same thing.
    </p>
-   <p>The cost of transport is currently a high percentage of the total cost of space missions. Total loss of missions due to launch failure, engine failure in space, or landing failure is frequent. Long delays due to the time it takes to prepare and launch rockets slows everything down. Any serious undertaking in space needs to address these issues before it does anything else. The road to profitability can be made much shorter thanks to proper design here.
+   <p>The cost of transport is currently a high percentage of the total cost of space missions. Total loss of missions due to launch failure, engine failure in space, or landing failure is 5% to 10% of everything launched. Long delays due to the time it takes to prepare and launch rockets slows everything down. Any serious undertaking in space needs to address these issues before it does anything else. The road to profitability can be made much shorter with a proper transport system design.
    </p>
   </details>
  </article>
