timeline revisions to end of phase 1
Former-commit-id: 9630edffa927facadf6365b8ec589718f0faaa38

--- a/_includes/timeline/shipsRobotsISA.html
+++ b/_includes/timeline/shipsRobotsISA.html
@@ -99,7 +99,7 @@
       <li>These simple stakes and perhaps one or two other simple shapes are produced in graphite molds filled with molten regolith produced with a parabolic mirror setup.</li>
       <li> Experimentation is done with making useful shapes by cast-in-place methods after pressing shapes into the powder regolith, and by scanning concentrated sunlight over a bed of powder regolith.</li>
       <li>Potential ice mining sites are scouted and surveyed. A large area is surveyed with ground-penetrating radar and seismic sensors, both within Hinshelwood Crater, and in surrounding depressions. Many cores are drilled out and taken for analysis in the lab.</li>
-      <li>Prototype equipment for ice mining is tested in shallow depressions that don't reach the un-Earthly cold of the large northern craters, which are far more challenging environments and of much greater scientific interest.</li>
+      <li>Prototype equipment for ice mining is tested in shallow depressions that don't reach the unEarthly cold of the large northern craters, which are far more challenging environments and of much greater scientific interest.</li>
       <li> A unit for boring deep holes is tested in a sunlit area. In the holes bored, small charges are laid and excavation by blasting is tested - far from everything else, and on a small scale. </li>
       <li>The wells for the LNC nuclear engines are blasted out and prepped. </li>
       <li>The LNCs conduct sortie missions scouting places of interest on the Moon and returning samples for testing in the lab.</li>
@@ -113,7 +113,7 @@
 <details>
   <summary>How the Crews Augment the Robots</summary>
   <ul>
-<li>They set up infrastructure that enhances the precision of the robots dramatically: rails, grids of sensors and signals, monitoring cameras. These are placed with precision the robots were not capble of on their own.</li>
+<li>They set up infrastructure that enhances the precision of the robots dramatically: rails, grids of sensors and signals, monitoring cameras. These are placed with precision the robots were not capable of on their own.</li>
 <li>They do any repairs that were beyond the abilities of the remotely operated repair bays, which mostly used drop-in replacement parts. They install and test equipment to give those repair bays abilities comparable to a human with a full workshop. </li>
 <li>They deploy and test the next generation of robots, designed based on experience with the first generation. They do final assembly and calibration before putting them through their paces in a way that efficiently collects data for design of the 3rd generation.</li>
 <li>They especially focus on deploying and testing several prototype water mining units, assessing them and adjusting them in a series of trials. This information is used to deploy the first generation of truly industrial equipment, after which water production becomes a real business.</li>
@@ -128,13 +128,13 @@
 <p>If assistance from the crew at Crossroads is required, they can fly in for a week at a time and stay in the inflatable hab. The aim would be very much to avoid that, perhaps there might be one or two such trips.</p>
 
 <h5>Water Production</h5>
-<p>Once a successful approach to ice mining is found, 200 tons of equipment is brought in to do just that. Environmental protection standards (to preserve the permanently shadowed regions for research) are terminated for Hinshelwood and Hermite A<sup class="note tooltip" data-tooltip-content="#iceProtection">[?]</sup>. They become ice mines. This opens the possibility of using techniques that are much more disruptive, but get ever more efficient with scale. One possibility is covering a large area with a strong membrane and sealing it to the ground, putting a heater in the center of it, and pumping off any gasses released by the heat.
+<p>Once a successful approach to ice mining is found, 200 tons of equipment is brought in to do just that. Environmental protection standards (to preserve the permanently shadowed regions for research) are terminated for Hinshelwood and Hermite A<sup class="note tooltip" data-tooltip-content="#iceProtection">[?]</sup>. They become ice mines. This opens the possibility of using techniques that are much more disruptive, but get ever more efficient with scale. One possibility is covering a large area with a strong membrane and sealing it to the ground, putting a heater in the center of it, and pumping off any gases released by the heat.
 </p>
-<p>With this industrial approach and the cargo capacity of the transport system, water production ramps up very quickly. Accompanying production of carbon dioxide, ammonia, and several trace gasses is also significant for lunar development. Production exceeds 10 kilotons per year within 5 years, if reserves are at the low end of predictions.</p>
+<p>With this industrial approach and the cargo capacity of the transport system, water production ramps up very quickly. Accompanying production of carbon dioxide, ammonia, and several trace gases is also significant for lunar development. Production exceeds 10 kilotons per year within 5 years, if reserves are at the low end of predictions.</p>
 <p>This means that all the fuel for the Pod Ships, the LNCs, and other spacecraft fueling at the EESS then comes from the Moon. </p>
 <div class="tooltip_templates">
   <span id="iceProtection">
-For the sake of preserving the lunar atmosphere (or rather, the lack thereof) mining approaches will be designed to minimize release of gasses. Otherwise, mining activities could multiply the number of molecules hanging around the Moon, making further research into its atmosphere difficult. It is also significant that colonization occurs only at the north pole until much later, leaving a few decades in which the south pole can be explored and documented, before it too is settled and mined.
+For the sake of preserving the lunar atmosphere (or rather, the lack thereof) mining approaches will be designed to minimize release of gases. Otherwise, mining activities could multiply the number of molecules hanging around the Moon, making further research into its atmosphere difficult. It is also significant that colonization occurs only at the north pole until much later, leaving a few decades in which the south pole can be explored and documented, before it too is settled and mined.
   </span>
 </div>
   </article>
@@ -145,8 +145,7 @@ For the sake of preserving the lunar atmosphere (or rather, the lack thereof) mi
     <p>The construction of the EESS serves as the test case for settling questions of jurisdiction, ownership, information sharing, and legal responsibility. Again the agreements covering the ISS are the model that would need to be built on.</p>
     <p>A shift to an open-source model regarding sharing of the technology developed for the project reduces tensions on several of those issues. A treaty is drawn up for the rest.</p>
     <p>As the project would be underway for a number of years before it involved a permanent human settlement, and a number of years more before there was profit, the scale of cooperation needed to continue working together can ramp up at a manageable pace. A limited-time amendment mechanism for the treaty is used to refine it during its first decade or two of existence.</p>
-    <p>The endeavor provides a model for international cooperation that can be applied in many other areas. The sense of shared goals that comes from the undertaking supports the growth of international goodwill. </p>
-    <p>This is, of course, the arena where Moonwards leaves reality aside. However, a case can be made that the path to world peace will have to go through something very much like this, some great group effort, or it won't happen at all. Even contemplation of that is helpful to reaching such peace. The rosy, cozy view in the socio-economic path outlined below maximizes the scope the project can ponder. In many places it is also simply convenient for organizing people within the virtual world. If things about it seem undesirable to you, please bear in mind it is deliberately Utopian for all these reasons, and is not meant to endorse any political policy in the real world.</p>
+    <p>The endeavor provides a model for international cooperation that can be applied in many other areas. The sense of shared goals that comes with the undertaking supports the growth of international goodwill. </p>
 
   </article>
 </div>
