--- a/_includes/timeline/timelineIntros.html
+++ b/_includes/timeline/timelineIntros.html
@@ -27,7 +27,8 @@
    <summary>A bridge to a new era</summary>
    <p>Everything here is predicated on the idea that a group of nations decide together to colonize the Moon and devote the funds necessary to do so properly without question. So, let the model be that the first missions are funded and carried out jointly by the nations with well-established space agencies - the United States, Russia, the European Union, China, India, Japan, and Canada. Once the Residence Program (explained below) begins, all nations participate.
    </p>
-   <p>The whole timeline takes an extremely rosy view of how things progress in space. That approach allows us to envision the broadest and most ambitious range of ventures out there, which is the project's main
+   <p>This is, of course, the arena where Moonwards leaves reality aside. A case can be made that until we undertake something together on the scale imagined here, and thus establish a sense of common cause, the world will not have peace. If so, contemplating it is helpful to reaching such peace, however remote it is from the world we live in. </p>
+   <p>The rosy, cozy view envisioned below also maximizes the scope of activity the project can ponder. In many places it's even simply convenient for organizing people into groups within the virtual world. If things about it seem undesirable to you, please bear in mind it is deliberately Utopian for all these reasons, and is not meant to endorse any political policy in the real world.
    </p>
   </details>
  </article>
