polish timeline phase 1
Former-commit-id: f7b426a86a6252bb1fa839c13788a33c6b59b309

--- a/_includes/timeline/shipsRobotsISA.html
+++ b/_includes/timeline/shipsRobotsISA.html
@@ -64,12 +64,13 @@
         <li>Before people can be landed on the surface, a system needs to be constructed to keep them safe from the radiation of the LNC engines. A well is excavated in the LNC landing pad, so that before people exit the craft, the engine section is unclamped and lowered into it, eliminating the radiation hazard. This unclamping and lowering system must be built into the craft from the beginning, and should be used as soon as the well is built, though people won't arrive for a couple of years.</li>
       </ul>
   </details>
-  <h5>Crossroads Skyhook and Anchor Station Construction</h5>
+  <h5><a href="https://www.moonwards.com/machines2.html#TetherTransport">Crossroads Skyhook</a> and Anchor Station Construction</h5>
   <p>Once the superstructure for Crossroads is delivered, it is continuously occupied by crews of 8, who stay for 4 weeks at a time. Further deliveries by the Pod Ships build up its capacity, and the regolith that the LNCs send up establish good shielding. Once there is enough shielding over key areas such as sleeping berths, crews begin to extend their stays. By the end of this phase a crew of 12 is always aboard, and people stay for up to a year at a time.
   </p>
   <p>The crew of Crossroads can operate the robots on the lunar surface, and on the skyhook, without the significant delay during transmissions from Earth which slow and complicate tele-operation. Much more complex and dynamic robotic work can be done in this situation. That is explained in the next column.
   </p>
   <p>By the end of this phase, the lower tether is equipped with a foot platform that can berth a fully loaded LNC, a tip platform that can berth a fully loaded Pod Ship, and climbers that can transfer the full payloads of both. This requires a total of 1000 tons of Zylon woven into a ribbon extending 5000 km downwards and another reaching 4500 km upwards, which can carry the load of the platforms, climbers, maintenance and motion control systems, berthed ships, and cargo, with a safety factor of 2.</p>
+  <p>The complete skyhook allows the LNCs to reach the foot platform using one fifth of the delta V needed to reach orbit, and the Pod Ships to break lunar orbit on an Earth trajectory with no fuel use at all - they just let go of the top of the tether.</p>
   <details>
     <summary>Crossroads Systems and Operations</summary>
     <ul>
@@ -137,6 +138,7 @@
 For the sake of preserving the lunar atmosphere (or rather, the lack thereof) mining approaches will be designed to minimize release of gases. Otherwise, mining activities could multiply the number of molecules hanging around the Moon, making further research into its atmosphere difficult. It is also significant that colonization occurs only at the north pole until much later, leaving a few decades in which the south pole can be explored and documented, before it too is settled and mined.
   </span>
 </div>
+<p><b>At the end of this phase First Hab is populated with a permanent crew of 40 people.</b></p>
   </article>
   <article class="column" id="InternationalSpaceAgency">
     <h5>Creation of the International Space Agency</h5>
