--- a/_includes/timeline/ph1-ships.html
+++ b/_includes/timeline/ph1-ships.html
@@ -37,11 +37,11 @@
       <li>These ships have next gen hydrolox engines capable of many restarts. They get serviced between trips at the EESS.</li>
       <li>Early missions are all to a polar orbit. Once tether construction begins, they all enter a circular orbit about 20&deg; off the Moon's terminator (between the night side and the day side), at an altitude of 5000 km. The skyhook complex goes there so that not only does it have constant sunlight on its solar panels,<sup class="note tooltip" data-tooltip-content="#terminator">[?]</sup> but the three later polar skyhooks spaced 45&deg; apart all will too.</li>
       <li>The 1st and 2nd missions deliver 2 Lunar Nuclear Craft, extra fuel, and initial equipment for surface operations.</li>
-      <li>The 3rd mission includes a constellation of remote sensing satellites and a basic lunar GPS system. Comms satellites are placed in orbit to give the polar area of operations constant contact with Earth. Imaging, spectral analysis, radar, and lidar equipment inspects every square inch of the Moon under every possible lighting condition, passing over any given spot on its surface 6 to 12 times a day.</li>
-      <li>There are 15 missions to deliver the equipment and components to build the first polar tether. The Pod Ship that delivers the first one stays in orbit so its solar arrays can power the construction equipment, plus it provides a comms link, orbital maintenance, and a stable construction platform. The other in operation at this point delivers goods every 2 weeks.</li>
-      <li>On the 3rd one, a crew pod is dropped off and connected to the Pod Ship staying in orbit, with a crew of 4 that stay for 4 weeks. They oversee initial deployment and testing of the skyhook construction equipment, and remotely operate equipment at the lunar pole. The 6th one delivers the superstructure of the future Crossroads Station, and the Pod Ship leaves, handing off its duties to that skeletal Station. The role of the Station after this is outlined in its section below.</li>
-      <li>After initial lunar surface operations, there are ongoing missions delivering equipment, fuel, and materials which the LNCs transfer to polar ops. </li>
-      <li>By the end of this phase, the Pod Ships have delivered many loads of equipment and supplies, and have rotated many crews. They return to the EESS carrying water, lunar dust that goes to soil beneficiation projects in its greenhouses, and initial in situ processed materials for testing and incorporation into internal elements of the EESS.</li>
+      <li>Then there are 20 missions to deliver the equipment and components to build the first polar skyhook. The Pod Ship that delivers the first of these stays in orbit so its solar arrays can power the construction equipment, plus it provides a comms link, orbital maintenance, and a stable construction platform. The other in operation at this point delivers materials and equipment every 2 weeks.</li>
+      <li>The first half dozen of these missions deploy several satellites each. First is a set of comms satellites so polar ops always has a radio link with Earth. The next three bring  sets of observation satellites for imaging in high resolution and a suite of wavelengths, plus radar, lidar, and gravity mapping. The last two deploy a lunar GPS system </li>
+      <li>On the 3rd skyhook mission, a crew pod is dropped off and connected to the Pod Ship staying in orbit, with a crew of 4 that stay for 4 weeks. They oversee initial deployment and testing of the skyhook construction equipment, and remotely operate equipment at the lunar pole. The 6th one delivers the superstructure of the future Crossroads Station, and the Pod Ship leaves, handing off its duties to that skeletal Station. The role of the Station after this is outlined in its section below.</li>
+      <li> A few months after the start of lunar surface operations, ongoing missions commence to deliver fuel, equipment and materials which the LNCs transfer to polar ops. </li>
+      <li>By the end of this phase, the Pod Ships have delivered many loads of equipment and supplies, and have rotated many crews. They return to the EESS carrying water, lunar dust that goes to soil beneficiation projects in its greenhouses, and initial in situ processed materials for testing, and later, for incorporation into internal elements of the EESS.</li>
     </ul>
   </details>
   <div class="tooltip_templates">
@@ -85,69 +85,4 @@
       An alternative is the climber cars run on nuclear power from a small reactor connected to Stirling engine generators. By putting the reactor in a separate car and running a power cable from there to the climber, the reactor can be kept a kilometer or more from the climber, allowing a shield with a smaller area to be used between the two. A shielded dock thus has to be made above the foot platform, so the climber can pass the reactor and reach its destination. A dock that is about 10 km from the anchor station is also needed, so the cone of shielded space is wide enough to cover the whole station, and anything that might stick out gets a weaker dose. Overall, the microwave beaming approach seems more flexible, more robust, and safer, as long as the beams can be kept well aligned despite oscillations due to actions on the tether. The transmitters would need to be able to rotate a small amount to keep receivers in their focus. Having flywheels to store energy as well thus is also interesting in that they can be used simultaneously to dampen oscillations. Energy harvested when climbers control descent by braking could also be used to spin up the flywheels. Perhaps calculations would show the flywheels would be too heavy to be a significant help, pending that it is just a thought.
     </span>
   </div>
-    <p><b>The Pod Ships make something on the order of 100 trips to the Moon during this phase.  </b></p>
   </article>
-  <article class="column" id="RobotRoverTests">
-    <h5><a href="machines.html#robots">Robot and Rover  Mission</a></h5>
-<p>Each of the 2 LNCs delivers equipment to the base site on the west rim of Hinshelwood crater, each returning once to the Pod Ship to land it all. They land 80 tons of robots, equipment, and supplies, and enough water for the hydrolysis pod to produce the fuel needed for them to make it back to orbit. The robots, operated from Earth and then from orbit, deploy the solar power systems, a hangar for lab work and long-term maintenance and repair, scout, test lots of equipment including for water mining, excavation, and construction, and do a bunch of 'paving' (fusing of the powdery surface into a solid layer). </p>
-<details>
-  <summary>Initial tasks done by robots</summary>
-    <ul>
-      <li>Set up tall masts for solar panels and microwave power transmitters, cables and power management equipment, and radiator units.</li>
-      <li>A half-pipe shaped hangar is set up on ground that has been roughly leveled and paved. It is an unpressurized shell with a various snap-together units inside, creating a maintenance and repair hangar for the robots and their tools, and a lab area. All the equipment for these tasks in installed in the prefab bays designed for them. </li>
-      <li>One of the cargo pods lowered from a LNC is a self-contained unit for converting water to liquid oxygen and liquid hydrogen. It only needs power from the solar masts or the LNC reactors, and its custom radiator units deployed. It lands with a full water tank.</li>
-      <li>A rover using simple mirrors and Fresnel lenses fuses surface regolith around the site. The thin layer created will tend to break up and shift, but by driving a grid of fused regolith stakes into the ground before passing the lens over an area, the melted surface fuses with the stakes into one piece. Cracking then doesn't lead to shifting. Thickening the fused layer by spreading more regolith overtop and heating it is done in areas that call for it, such as the LNC landing pads. </li>
-      <li>These simple stakes and perhaps one or two other simple shapes are produced in graphite molds filled with molten regolith produced with a parabolic mirror setup.</li>
-      <li> Experimentation is done with making useful shapes by cast-in-place methods after pressing shapes into the powder regolith, and by scanning concentrated sunlight over a bed of powder regolith.</li>
-      <li>Potential ice mining sites are scouted and surveyed. A large area is surveyed with ground-penetrating radar and seismic sensors, both within Hinshelwood Crater, and in surrounding depressions. Many cores are drilled out and taken for analysis in the lab.</li>
-      <li>Prototype equipment for ice mining is tested in shallow depressions that don't reach the unEarthly cold of the large northern craters, which are far more challenging environments and of much greater scientific interest.</li>
-      <li> A unit for boring deep holes is tested in a sunlit area. In the holes bored, small charges are laid and excavation by blasting is tested - far from everything else, and on a small scale. </li>
-      <li>The wells for the LNC nuclear engines are blasted out and prepped. </li>
-      <li>The LNCs conduct sortie missions scouting places of interest on the Moon and returning samples for testing in the lab.</li>
-    </ul>
-  </details>
-
-<h5>Crew Sortie Mission and Robot Expansion</h5>
-<p>An initial inflatable hab for crew sorties that looks a lot like a Quonset hut (based on upcoming design by Benaroya et al.) is delivered and set up prior to the arrival of a crew of 4 that stays for 2 weeks. The LNCs deliver a further 100 tons of materials and supplies in  support of the crew and accompanying mission goals. </p>
-<p>Their work makes the robots about as agile and precise as people. They test and deploy the new equipment that arrived before their mission. Much of that equipment is prototype water mining robots. By the time they leave, the robots on the base are as capable as a permanent crew of around 30 people. They are assisted in their work by the crew on Crossroads Station, who do the remote operation of the robots.</p>
-
-<details>
-  <summary>How the Crews Augment the Robots</summary>
-  <ul>
-<li>They set up infrastructure that enhances the precision of the robots dramatically: rails, grids of sensors and signals, monitoring cameras. These are placed with precision the robots were not capable of on their own.</li>
-<li>They do any repairs that were beyond the abilities of the remotely operated repair bays, which mostly used drop-in replacement parts. They install and test equipment to give those repair bays abilities comparable to a human with a full workshop. </li>
-<li>They deploy and test the next generation of robots, designed based on experience with the first generation. They do final assembly and calibration before putting them through their paces in a way that efficiently collects data for design of the 3rd generation.</li>
-<li>They especially focus on deploying and testing several prototype water mining units, assessing them and adjusting them in a series of trials. This information is used to deploy the first generation of truly industrial equipment, after which water production becomes a real business.</li>
-<li>They set up the guides and markers showing the robots where to excavate for the first permanent hab, and the production units for the construction materials that hab will be made of. They ensure the products from those stations meet quality standards and the construction robots are performing up to spec. Once satisfied, they give the green light for construction to commence.</li>
-</ul>
-</details>
-
-<h5><a href="https://moonwards.com/colonies.html#PolarFirstHab">Construction of First Hab at the Polar Base</a></h5>
-<p>This habitat is the first instance of the robots doing <a class="https://www.moonwards.com/machines.html#building">truly complex work</a>. It isn't possible until the crew on Crossroads is able to control them finely, and count on them to execute a lot of complex behaviour with little to no direction (such as maintaining their balance, picking things up, throwing and catching things).</p>
-<p>It also requires excavating a cube 30 m on a side, and mass production of simple construction materials with consistent quality (though that quality doesn't have to be high). The outer walls and internal floors, walls and furnishings are made with local materials. </p>
-<p>Everything else is shipped in, but it takes only one Pod Ship payload to deliver it all. Large items include a second inflatable hab with an extra large airlock, the tubes and mirrors of the light funnels, the multi-layer transparent membrane roof and its reinforcing cables, several very large high-resolution computer screens, and a radiator unit.</p>
-<p>If assistance from the crew at Crossroads is required, they can fly in for a week at a time and stay in the inflatable hab. The aim would be very much to avoid that, perhaps there might be one or two such trips.</p>
-
-<h5>Water Production</h5>
-<p>Once a successful approach to ice mining is found, 200 tons of equipment is brought in to do just that. Environmental protection standards (to preserve the permanently shadowed regions for research) are terminated for Hinshelwood and Hermite A<sup class="note tooltip" data-tooltip-content="#iceProtection">[?]</sup>. They become ice mines. This opens the possibility of using techniques that are much more disruptive, but get ever more efficient with scale. One possibility is covering a large area with a strong membrane and sealing it to the ground, putting a heater in the center of it, and pumping off any gases released by the heat.
-</p>
-<p>With this industrial approach and the cargo capacity of the transport system, water production ramps up very quickly. Accompanying production of carbon dioxide, ammonia, and several trace gases is also significant for lunar development. Production exceeds 10 kilotons per year within 5 years, if reserves are at the low end of predictions.</p>
-<p>This means that all the fuel for the Pod Ships, the LNCs, and other spacecraft fueling at the EESS then comes from the Moon. </p>
-<div class="tooltip_templates">
-  <span id="iceProtection">
-For the sake of preserving the lunar atmosphere (or rather, the lack thereof) mining approaches will be designed to minimize release of gases. Otherwise, mining activities could multiply the number of molecules hanging around the Moon, making further research into its atmosphere difficult. It is also significant that colonization occurs only at the north pole until much later, leaving a few decades in which the south pole can be explored and documented, before it too is settled and mined.
-  </span>
-</div>
-<p><b>At the end of this phase First Hab is populated with a permanent crew of 40 people.</b></p>
-  </article>
-  <article class="column" id="InternationalSpaceAgency">
-    <h5>Creation of the International Space Agency</h5>
-    <p>The agencies of most of the major space-faring nations cooperated in the construction of the International Space Station: ESA, JAXA, Roscosmos, NASA, and CSA. This is the best precedent but is a minor collaboration compared to what would be involved in settling the Moon.</p>
-    <p>So the ISA is created and has its own staff, taken from all the member agencies. The founders are the United States, Russia, China, the European Union, India, Japan, and Canada. The agency creates the overall plan and parcels out the work on it. As the United States remains the country with the largest space industry and the most launch facilities, it is headquartered in Florida not far from Kennedy Space Center. </p>
-    <p>The construction of the EESS serves as the test case for settling questions of jurisdiction, ownership, information sharing, and legal responsibility. Again the agreements covering the ISS are the model that would need to be built on.</p>
-    <p>A shift to an open-source model regarding sharing of the technology developed for the project reduces tensions on several of those issues. A treaty is drawn up for the rest.</p>
-    <p>As the project would be underway for a number of years before it involved a permanent human settlement, and a number of years more before there was profit, the scale of cooperation needed to continue working together can ramp up at a manageable pace. A limited-time amendment mechanism for the treaty is used to refine it during its first decade or two of existence.</p>
-    <p>The endeavor provides a model for international cooperation that can be applied in many other areas. The sense of shared goals that comes with the undertaking supports the growth of international goodwill. </p>
-
-  </article>
-</div>
