timeline work, fix post nav bar
Former-commit-id: 75dd9604363de5d6cc34a77bf40945e186270e4f

--- a/_includes/lalande/LalSoilTemp.html
+++ b/_includes/lalande/LalSoilTemp.html
@@ -1,4 +1,4 @@
-					<figure class="pix" id="nightTemp" style="max-width: 750px;" id="LalSoilTemp">
+					<figure class="pix" style="max-width: 750px;" id="LalSoilTemp">
 						<img src="img/LalandeTempDiff.jpg">
 						<figcaption>Map of nighttime soil temperatures by the Lunar Reconnaissance Orbiter Diviner instrument. Each pixel the instrument records is about 200 m across.
 						</figcaption>
