--- a/_includes/timeline/ph1-ships.html
+++ b/_includes/timeline/ph1-ships.html
@@ -18,13 +18,12 @@
           used to fill the fuel tanks of ships, is clustered around that module.</li>
         <li>Further modules extending the Hub house all the key infrastructure for the Station - power conversion and distribution, cooling, air tanks, air scrubbers, airlocks and docks for crewed ships, tools, sensors, comms equipment, and initial crew quarters.
           </li>
-        <li>Then, a rotating flattened Torus is added, for a simulated gravity environment. The torus is large enough to accommodate both crew quarters and labs doing a range of research on low-gravity. It has several greenhouse spaces and sections for animal
-          experiments. Its outer rim experiences centrifugal force equivalent to the gravity on Mars, while the top floor of its torus is like lunar gravity. The hub contains a lab for micro-gravity experiments.</li>
-        <li>Finally, 4 Teardrops are added to the torus, spaced 90&deg; apart, each across from one of the tubes connecting the Torus to the Hub. The shallow bowls at the bottom of the cones connecting them to the Torus experience centrifugal force of nearly
-          one gravity. This means crew would move regularly between environments with different levels of gravity. Over time, monitoring of the crew's health establishes how much time in how much gravity is needed for good health. </li>
+        <li>Then, a rotating flattened Torus is added, for a simulated gravity environment. The torus is large enough to accommodate both crew quarters and labs doing a range of research on low-gravity. It has several greenhouse spaces and sections for animal experiments. Its outer rim experiences centrifugal force equivalent to the gravity on Mars, while the top floor of its torus is like lunar gravity. The hub contains a lab for micro-gravity experiments.</li>
+        <li>Finally, 4 Teardrops are added to the torus, spaced 90&deg; apart, each across from one of the tubes connecting the Torus to the Hub. The shallow bowls at the bottom of the cones connecting them to the Torus experience centrifugal force of nearly one gravity. This means crew would move regularly between environments with different levels of gravity. Over time, monitoring of the crew's health establishes how much time in how much gravity is needed for good health. </li>
         <li>The solar panels need to be quite extensive for the Station to do its construction and processing work, and to supply the labs with all the power they need. They extend from the end of the hub opposite the hexagon of trusses, together with the
         radiator panels. </li>
         <li>Many elements of the final components built, including internal elements of the Torus and the Teardrops, are made with materials from the Moon</li>
+        <li>Water and lunar dust from the Moon turn the greenhouses and animal habitats into complex micro-environments. This enables experiments in creating fertile soil from the lunar dust, cultivation of a wide range of plants, and the adaptation of small animals to the small garden environments thus created.</li>
       </ul>
     </details>
     <h5><a href="machines2.html#PodShip">Pod Ships start shuttling between Earth orbit and Lunar Orbit</a></h5>
@@ -41,7 +40,7 @@
       <li>The first half dozen of these missions deploy several satellites each. First is a set of comms satellites so polar ops always has a radio link with Earth. The next three bring  sets of observation satellites for imaging in high resolution and a suite of wavelengths, plus radar, lidar, and gravity mapping. The last two deploy a lunar GPS system </li>
       <li>On the 3rd skyhook mission, a crew pod is dropped off and connected to the Pod Ship staying in orbit, with a crew of 4 that stay for 4 weeks. They oversee initial deployment and testing of the skyhook construction equipment, and remotely operate equipment at the lunar pole. The 6th one delivers the superstructure of the future Crossroads Station, and the Pod Ship leaves, handing off its duties to that skeletal Station. The role of the Station after this is outlined in its section below.</li>
       <li> A few months after the start of lunar surface operations, ongoing missions commence to deliver fuel, equipment and materials which the LNCs transfer to polar ops. </li>
-      <li>By the end of this phase, the Pod Ships have delivered many loads of equipment and supplies, and have rotated many crews. They return to the EESS carrying water, lunar dust that goes to soil beneficiation projects in its greenhouses, and initial in situ processed materials for testing, and later, for incorporation into internal elements of the EESS.</li>
+      <li>By the end of this phase, the Pod Ships have delivered many loads of equipment and supplies, and have rotated many crews. They return to the EESS carrying water, regolith and rock, and initial in situ processed materials for testing, and later, for incorporation into internal elements of the EESS.</li>
     </ul>
   </details>
   <div class="tooltip_templates">
