--- a/_includes/timeline/ph1-robots.html
+++ b/_includes/timeline/ph1-robots.html
@@ -40,13 +40,8 @@
 <p>If assistance from the crew at Crossroads is required, they can fly in for a week at a time and stay in the inflatable hab. The aim would be very much to avoid that, perhaps there might be one or two such trips.</p>
 
 <h5>Water Production</h5>
-<p>Once a successful approach to ice mining is found, 200 tons of equipment is brought in to do just that. Environmental protection standards (to preserve the permanently shadowed regions for research) are terminated for Hinshelwood and Hermite A<sup class="note tooltip" data-tooltip-content="#iceProtection">[?]</sup>. They become ice mines. This opens the possibility of using techniques that are much more disruptive, but get ever more efficient with scale. One possibility is covering a large area with a strong membrane and sealing it to the ground, putting a heater in the center of it, and pumping off any gases released by the heat.
+<p>Once a successful approach to ice mining is found, 200 tons of equipment is brought in to do just that. Initial caution to preserve the permanently shadowed regions for research is abandoned in Hinshelwood Crater and Hermite A Crater. They become ice mines. This opens the possibility of using techniques that are much more disruptive, but get ever more efficient with scale. One possibility is covering a large area with a strong membrane and sealing it to the ground, putting a heater in the center of it, and pumping off any gases released by the heat.
 </p>
 <p>With this industrial approach and the cargo capacity of the transport system, water production ramps up very quickly. Accompanying production of carbon dioxide, ammonia, and several trace gases is also significant for lunar development. Production exceeds 10 kilotons per year within 5 years, if reserves are at the low end of predictions.</p>
 <p>This means that all the fuel for the Pod Ships, the LNCs, and other spacecraft fueling at the EESS then comes from the Moon. </p>
-<div class="tooltip_templates">
-<span id="iceProtection">
-For the sake of preserving the lunar atmosphere (or rather, the lack thereof) mining approaches will be designed to minimize release of gases. Otherwise, mining activities could multiply the number of molecules hanging around the Moon, making further research into its atmosphere difficult. It is also significant that colonization occurs only at the north pole until much later, leaving a few decades in which the south pole can be explored and documented, before it too is settled and mined.
-</span>
-</div>
 </article>
