--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ $(document).ready(function() {
 		</script>
 	</head>
 <body>
-{%include nav.html%}
+{%include postnav.html%}
 <header>
 		<h1>{{page.title}}</h1>
 </header>
